src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__field_input__tests__snapshot_field_input_with_error.snap
---
source: src/adapters/tui/widgets/field_input.rs
expression: terminal.backend()
---
"┌Schema────────────────────────────────────────────────────┐"
"│Script: <unknown>                                         │"
"│Schema: -                                                 │"
"│Description: -                                            │"
"│Error: Validation failed: target is required              │"
"└──────────────────────────────────────────────────────────┘"
"┌Fields────────────────────────────────────────────────────┐"
"│No fields found.                                          │"
"└──────────────────────────────────────────────────────────┘"
"Tab/Shift+Tab to move, Enter to run, Ctrl+B back, Esc quit  "
