src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__field_input__tests__snapshot_field_input_with_fields.snap
---
source: src/adapters/tui/widgets/field_input.rs
expression: terminal.backend()
---
"┌Schema────────────────────────────────────────────────────┐"
"│Script: deploy.sh                                         │"
"│Schema: Deploy                                            │"
"│Description: -                                            │"
"└──────────────────────────────────────────────────────────┘"
"┌Fields────────────────────────────────────────────────────┐"
"│┌target (string, required)───────────────────────────────┐│"
"││Prompt: Target environment                              ││"
"││Value: prod                                             ││"
"│└────────────────────────────────────────────────────────┘│"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"Tab/Shift+Tab to move, Enter to run, Ctrl+B back, Esc quit  "
